<resources>
    <string name="app_name">PulseIT</string>
    <string name="titulo_elige_tema"> Elige un tema</string>
    <string name="subtitulo_elige_tema"> ¿Qué desafío quieres jugar hoy?</string>
    <string name="animales_elige_tema"> Animales</string>
    <string name="colores_elige_tema"> Colores</string>
    <string name="numeros_elige_tema"> Números</string>
    <string name="titulo_configura_partida"> Configura tu partida</string>
    <string name="subtitulo_configura_partida"> Temática: Animales</string>
    <string name="configura_partida_dificultad"> Dificultad</string>
    <string name="configura_partida_idioma"> Idioma</string>
    <string name="tipo_dificultad_uno"> Fácil</string>
    <string name="tipo_dificultad_dos"> Medio</string>
    <string name="tipo_dificultad_tres"> Dificil</string>
    <string name="tipo_idioma_uno"> Español</string>
    <string name="tipo_idioma_dos"> Inglés</string>
    <string name="btn_empezarjuego"> Empezar juego</string>
    <string name="btn_volver_modos"> Volver a modos</string>
    <string name="btn_volver_inicio"> Volver al inicio</string>
    <string name="slogan">Aprendizaje háptico–visual para niños</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_placeholder">Pedro Pérez</string>
    <string name="password">Contraseña</string>
    <string name="password_placeholder">***********</string>
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_invitado">Jugar como invitado</string>
    <string name="cuenta">¿Ya tienes una cuenta?  </string>
    <string name="configuracion">Configuración</string>
    <string name="personaliza_experiencia">Personaliza tu experiencia de juego</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="modo_color">Modo de color</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="opciones">¿Animales, colores o números?</string>
    <string name="default_web_client_id">815690800009-g4va1qefbf9q2pvdd3uarnujat3pnd69.apps.googleusercontent.com</string>

    <string name="observe_text">¡Observa!</string>
    <string name="your_turn_text">¡Tu Turno!</string>
    <string name="level_prefix">Nivel %d</string>
    <string name="difficulty_easy">easy</string>
    <string name="difficulty_medium">medium</string>
    <string name="difficulty_hard">hard</string>
    <string name="theme_animals">animals</string>
    <string name="theme_numbers">numbers</string>
    <string name="theme_colors">colors</string>

    <string name="nivel">¡Nivel 5 Superado!</string>
    <string name="player">Jugador 1</string>
    <string name="btn_play_again">Jugar de nuevo</string>
    <string name="puntaje">PUNTUACIÓN</string>
    <string name="nivel_txt">NIVEL</string>
    <string name="nivel_ct">5</string>
    <string name="tiempo">TIEMPO</string>
    <string name="tiempo_ct">02:45</string>
    <string name="puntaje_ct">15.230</string>
    <string name="medalla">Medalla</string>
</resources>