<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfiguracionPartidaActivity">

    <View
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:background="@drawable/bg_pulseit_degradado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoPulseIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/configuracion"
        android:textColor="#3F3A3A"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoPulseIt" />

    <TextView
        android:id="@+id/txtTematica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/personaliza_experiencia"
        android:textColor="#6F6F6F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <LinearLayout
        android:id="@+id/cardOpciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/bg_white_card"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTematica">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:paddingEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="icono mundo"
            android:src="@drawable/ic_world" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/configura_partida_idioma"
            android:textColor="#3F3A3A"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/btnEsp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_white"
                android:elevation="6dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tipo_idioma_uno"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Space
                android:layout_width="12dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/btnEng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_white"
                android:elevation="6dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tipo_idioma_dos"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp">
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_sun"
            android:contentDescription="icono sol" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/modo_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#3F3A3A" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/btnClaro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_white"
                android:elevation="6dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/claro"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Space
                android:layout_width="12dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/btnOscuro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_white"
                android:elevation="6dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/oscuro"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/btnVolver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_card_peach"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/volver"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <Space
                android:layout_width="12dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/btnGuardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_card_green"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/guardar"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
